# configurator-pg

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  configurator-pg.cabal
.github/workflows/: haskell.yml
src/Data/: Configurator.hs
src/Data/Configurator/: Load.hs  Parser.hs  Syntax.hs  Types.hs
tests/: Test.hs
tests/resources/: err-import-2.cfg  err-import-2.cfg.err  err-import.cfg  err-import.cfg.err  err-interpolate-1.cfg  err-interpolate-1.cfg.err  err-interpolate-2.cfg  err-interpolate-2.cfg.err  err-parse-interp-1.cfg  err-parse-interp-1.cfg.err  err-parse-interp-2.cfg  err-parse-interp-2.cfg.err  err-parse-interp-3.cfg  err-parse-interp-3.cfg.err  err-parse-interp-4.cfg  err-parse-interp-4.cfg.err  err-single-quote.cfg  interp.cfg  pathological.cfg  readme.cfg  simple.cfg
tests/resources/secrets/: passwords.txt
